methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: value update is not a member of java.awt.Color
    if (getCouleurSol()=Color.green) {
        ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (nb <- 1 to 4){
          ^