methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var nb=0
  for (nb <- 1 to 4){
    avance()
    if (getCouleurSol()=Color.green) {
      recule()
      return true
    }
    gauche()    
   }
  }

